--- a/css/meanmenu.css
+++ b/css/meanmenu.css
@@ -3,7 +3,7 @@
      display: none;
 }
  .mean-container .mean-bar {
-     background: #2597b7;
+     background: #00a9a3;
      float: left;
      min-height: 40px;
      padding: 5px 0;
@@ -56,7 +56,7 @@
 }
  .mean-container .mean-nav ul li a {
      border-bottom: 1px solid #ccc;
-     color: #383838;
+     color: #00a9a3;
      display: block;
      float: left;
      font-size: 12px;
