--- a/css/normalize.css
+++ b/css/normalize.css
@@ -124,6 +124,11 @@ strong {
 b,
 strong {
   font-weight: bolder;
+  color: #f5ba36;
+     font-weight: bold;
+     font-size: 25px;
+     line-height: 20px;
+     text-transform: uppercase;
 }
 
 /**
