--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ html {
 }
 
 body {
-     color: white;
+     color: #fff;
      font-size: 14px;
      font-family: 'poppins', sans-serif;
      line-height: 1.80857;
@@ -1162,6 +1162,11 @@ ul.social_icon li a:hover {
 .text-bg p {
      color: #ffffff;
      font-size: 17px;
+     background-color: rgb(0, 169, 163, 0.5); /* Zwart met 50% transparantie */
+            color: white; /* Witte tekst */
+            padding: 20px; /* Ruimte rondom de tekst */
+            border-radius: 10px; /* Afgeronde hoeken */
+            width: fit-content; /* Past de breedte aan de inhoud aan */
 }
 .text-bg a {
      text-align: center;
@@ -1427,6 +1432,8 @@ ul.social_icon li a:hover {
 }
 .Better_clean figure img {
      width: 100%;
+     border: 15px solid #00a9a3; /* Kleur en dikte van de rand */
+            border-radius: 10px; /* Afgeronde hoeken (optioneel) */
 }
 
 /** end Better **/
@@ -1435,7 +1442,7 @@ ul.social_icon li a:hover {
 .review {
      padding-top: auto;
      padding-bottom: auto;
-     background: url(../images/HCK_2020-1\ half.jpg);
+     background: url(../images/hoornbeeck\ ronde\ kant3.jpeg);
      background-repeat: no-repeat;
 }
 .review .titlepage {
@@ -1471,12 +1478,24 @@ ul.social_icon li a:hover {
      padding: 20px 0;
      text-transform: uppercase;
      display: block;
+
+     background-color: rgba(0, 0, 0, 0.5); /* Zwart met 50% transparantie */
+            color: white; /* Witte tekst */
+            padding: 20px; /* Ruimte rondom de tekst */
+            border-radius: 10px; /* Afgeronde hoeken */
+            width: fit-content; /* Past de breedte aan de inhoud aan */
 }
 .banner-main2 .carousel-caption p {
      color: #fff;
      font-size: 17px;
      line-height: 30px;
      padding-bottom: 25px;
+
+     background-color: rgb(0, 169, 163, 0.5); /* Zwart met 50% transparantie */
+            color: white; /* Witte tekst */
+            padding: 20px; /* Ruimte rondom de tekst */
+            border-radius: 10px; /* Afgeronde hoeken */
+            
 }
 .banner-main2 .carousel-caption a {
      font-size: 17px;
@@ -1751,3 +1770,10 @@ ul.social_icon li a:hover {
  a:hover {
             color: #00a9a3; /* Kleur van de link wanneer je er met de cursor overheen gaat */
         }
+
+        .gekleurd-blok {
+          background-color: #f5ba36; /* Achtergrondkleur van het blok */
+          padding: 2px 5px; /* Ruimte rondom het woord */
+          border-radius: 3px; /* Afgeronde hoeken (optioneel) */
+      }
+
